Updated All required changes

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "portfolio-website",
   "version": "1.0.0",
-  "description": "",
+  "description": "<a name=\"readme-top\"></a>",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
